@@ -21,5 +21,6 @@ Require-Bundle: org.eclipse.core.resources,
  org.eclipse.cdt.ui,
  org.eclipse.debug.core,
  org.eclipse.debug.ui,
- org.eclipse.core.runtime
+ org.eclipse.core.runtime,
+ org.eclipse.ui.console
 Eclipse-LazyStart: true
