@@ -17,3 +17,6 @@ SetAutoSolibAction.label=Automatically Load Shared Libraries
 SetAutoSolibAction.tooltip=Automatically Load Shared Libraries On/Off
 
 TargetOptionsPage.label=GDB/MI Options
+
+VerboseMode.label=Verbose Mode
+VerboseMode.tooltip=Verbose Mode For gdb Console
